update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Principles-of-electricity_75464
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 75464-h/images/cover.jpg
 creator:
   author:
     agent_name: Shipley, Maynard
@@ -18,6 +21,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/486
     wikipedia: https://en.wikipedia.org/wiki/E._Haldeman-Julius
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/75464#Principles-of-electricity
 gutenberg_issued: '2025-02-25'
 gutenberg_type: Text
 identifiers:
